[gd_scene load_steps=12 format=2]

[ext_resource path="res://Scripts/gameplay_script.gd" type="Script" id=1]
[ext_resource path="res://Sprites/main_tileset.tres" type="TileSet" id=2]
[ext_resource path="res://Scenes/tree.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/castle.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/village.tscn" type="PackedScene" id=5]
[ext_resource path="res://m5x7.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://Sprites/invading_knight_spritesheet.png" type="Texture" id=7]

[sub_resource type="DynamicFont" id=9]

size = 16
use_mipmaps = false
use_filter = false
font_data = ExtResource( 6 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="Theme" id=10]

default_font = SubResource( 9 )

[sub_resource type="Animation" id=13]

resource_name = "battle_end_anim"
length = 6.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("UI/FadeRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=14]

resource_name = "game_over_anim"
length = 3.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("UI/FailLabel:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("UI/GameOverLabel:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[node name="InvasionScene" type="Node2D"]

script = ExtResource( 1 )

[node name="TileMap" type="TileMap" parent="." index="0"]

z_index = -500
mode = 0
tile_set = ExtResource( 2 )
cell_size = Vector2( 16, 16 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = false
cell_clip_uv = false
collision_use_kinematic = false
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 1
collision_mask = 1
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray( 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 0, 0, 11, 0, 0, 12, 0, 0, 13, 0, 0, 14, 0, 0, 15, 0, 0, 65536, 0, 0, 65537, 0, 0, 65538, 0, 0, 65539, 0, 0, 65540, 0, 0, 65541, 0, 0, 65542, 0, 0, 65543, 0, 0, 65544, 0, 0, 65545, 0, 0, 65546, 0, 0, 65547, 0, 0, 65548, 0, 0, 65549, 0, 0, 65550, 0, 0, 65551, 0, 0, 131072, 0, 0, 131073, 0, 0, 131074, 0, 0, 131075, 0, 0, 131076, 0, 0, 131077, 0, 0, 131078, 5, 0, 131079, 5, 0, 131080, 5, 0, 131081, 5, 0, 131082, 0, 0, 131083, 0, 0, 131084, 0, 0, 131085, 0, 0, 131086, 0, 0, 131087, 0, 0, 196608, 0, 0, 196609, 0, 0, 196610, 0, 0, 196611, 0, 0, 196612, 0, 0, 196613, 6, 0, 196614, 1, 0, 196615, 1, 0, 196616, 1, 0, 196617, 1, 0, 196618, 7, 0, 196619, 0, 0, 196620, 0, 0, 196621, 0, 0, 196622, 0, 0, 196623, 0, 0, 262144, 0, 0, 262145, 0, 0, 262146, 0, 0, 262147, 0, 0, 262148, 3, 0, 262149, 1, 0, 262150, 1, 0, 262151, 1, 0, 262152, 1, 0, 262153, 1, 0, 262154, 1, 0, 262155, 2, 0, 262156, 0, 0, 262157, 0, 0, 262158, 0, 0, 262159, 0, 0, 327680, 0, 0, 327681, 0, 0, 327682, 0, 0, 327683, 0, 0, 327684, 3, 0, 327685, 1, 0, 327686, 1, 0, 327687, 1, 0, 327688, 1, 0, 327689, 1, 0, 327690, 1, 0, 327691, 2, 0, 327692, 0, 0, 327693, 0, 0, 327694, 0, 0, 327695, 0, 0, 393216, 0, 0, 393217, 0, 0, 393218, 0, 0, 393219, 0, 0, 393220, 0, 0, 393221, 9, 0, 393222, 1, 0, 393223, 1, 0, 393224, 1, 0, 393225, 1, 0, 393226, 8, 0, 393227, 0, 0, 393228, 0, 0, 393229, 0, 0, 393230, 0, 0, 393231, 0, 0, 458752, 0, 0, 458753, 0, 0, 458754, 0, 0, 458755, 0, 0, 458756, 0, 0, 458757, 0, 0, 458758, 4, 0, 458759, 4, 0, 458760, 4, 0, 458761, 4, 0, 458762, 0, 0, 458763, 0, 0, 458764, 0, 0, 458765, 0, 0, 458766, 0, 0, 458767, 0, 0, 524288, 0, 0, 524289, 0, 0, 524290, 0, 0, 524291, 0, 0, 524292, 0, 0, 524293, 0, 0, 524294, 0, 0, 524295, 0, 0, 524296, 0, 0, 524297, 0, 0, 524298, 0, 0, 524299, 0, 0, 524300, 0, 0, 524301, 0, 0, 524302, 0, 0, 524303, 0, 0 )
_sections_unfolded = [ "Cell", "Z Index" ]

[node name="Trees" type="Node2D" parent="." index="1"]

editor/display_folded = true

[node name="Tree" parent="Trees" index="0" instance=ExtResource( 3 )]

position = Vector2( 16, 16 )

[node name="Tree2" parent="Trees" index="1" instance=ExtResource( 3 )]

position = Vector2( 8, 80 )

[node name="Tree3" parent="Trees" index="2" instance=ExtResource( 3 )]

position = Vector2( 144, 16 )

[node name="Tree4" parent="Trees" index="3" instance=ExtResource( 3 )]

position = Vector2( 88, 8 )

[node name="Tree5" parent="Trees" index="4" instance=ExtResource( 3 )]

position = Vector2( 16, 128 )

[node name="Tree6" parent="Trees" index="5" instance=ExtResource( 3 )]

position = Vector2( 112, 136 )

[node name="Tree7" parent="Trees" index="6" instance=ExtResource( 3 )]

position = Vector2( 232, 72 )

[node name="Tree8" parent="Trees" index="7" instance=ExtResource( 3 )]

position = Vector2( 240, 120 )

[node name="Tree9" parent="Trees" index="8" instance=ExtResource( 3 )]

position = Vector2( 248, 16 )

[node name="Castle" parent="." index="2" instance=ExtResource( 4 )]

position = Vector2( 128, 72 )
_sections_unfolded = [ "Transform" ]

[node name="Village" parent="." index="3" instance=ExtResource( 5 )]

editor/display_folded = true
position = Vector2( 48, 112 )

[node name="Village2" parent="." index="4" instance=ExtResource( 5 )]

position = Vector2( 48, 40 )

[node name="Village3" parent="." index="5" instance=ExtResource( 5 )]

position = Vector2( 208, 40 )

[node name="Camera2D" type="Camera2D" parent="." index="6"]

anchor_mode = 0
rotating = false
current = true
zoom = Vector2( 0.25, 0.25 )
limit_left = -10000000
limit_top = -10000000
limit_right = 10000000
limit_bottom = 10000000
limit_smoothed = false
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = false
smoothing_speed = 5.0
offset_v = 0.0
offset_h = 0.0
drag_margin_left = 0.2
drag_margin_top = 0.2
drag_margin_right = 0.2
drag_margin_bottom = 0.2
editor_draw_screen = true
editor_draw_limits = false
editor_draw_drag_margin = false
_sections_unfolded = [ "Transform" ]

[node name="Village4" parent="." index="7" instance=ExtResource( 5 )]

position = Vector2( 208, 112 )

[node name="UI" type="Node2D" parent="." index="8"]

z_index = 2000
z_as_relative = false
_sections_unfolded = [ "Transform", "Z Index" ]

[node name="FadeRect" type="ColorRect" parent="UI" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 256.0
margin_bottom = 144.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 0, 0, 0, 0 )
_sections_unfolded = [ "Mouse", "Rect", "Visibility" ]

[node name="GameOverLabel" type="Label" parent="UI" index="1"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 100.0
margin_top = 65.0
margin_right = 156.0
margin_bottom = 79.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
theme = SubResource( 10 )
text = "Game Over!"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "Theme", "Visibility" ]

[node name="FailLabel" type="Label" parent="UI" index="2"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 64.0
margin_top = 56.0
margin_right = 192.0
margin_bottom = 95.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
theme = SubResource( 10 )
text = "You have been killed... Your subjects are next."
align = 1
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "Theme", "Visibility" ]

[node name="InvasionSources" type="Node2D" parent="." index="9"]

[node name="SpawnPoint" type="Sprite" parent="InvasionSources" index="0"]

position = Vector2( 128, -24 )
texture = ExtResource( 7 )

[node name="SpawnPoint2" type="Sprite" parent="InvasionSources" index="1"]

position = Vector2( 128, 168 )
texture = ExtResource( 7 )

[node name="SpawnPoint3" type="Sprite" parent="InvasionSources" index="2"]

position = Vector2( -24, 80 )
texture = ExtResource( 7 )

[node name="SpawnPoint4" type="Sprite" parent="InvasionSources" index="3"]

position = Vector2( 280, 80 )
texture = ExtResource( 7 )

[node name="InvasionSpawnTimer" type="Timer" parent="." index="10"]

process_mode = 1
wait_time = 0.2
one_shot = false
autostart = true

[node name="InvasionCombatTimer" type="Timer" parent="." index="11"]

process_mode = 1
wait_time = 1.5
one_shot = false
autostart = false

[node name="InvasionAnimationPlayer" type="AnimationPlayer" parent="." index="12"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/battle_end_anim = SubResource( 13 )
anims/game_over_anim = SubResource( 14 )
blend_times = [  ]

[connection signal="timeout" from="InvasionSpawnTimer" to="." method="_on_InvasionSpawnTimer_timeout"]

[connection signal="timeout" from="InvasionCombatTimer" to="." method="_on_InvasionCombatTimer_timeout"]

[connection signal="animation_finished" from="InvasionAnimationPlayer" to="." method="_on_InvasionAnimationPlayer_animation_finished"]


